--- a/proj.win32/HelloWorld.vcxproj
+++ b/proj.win32/HelloWorld.vcxproj
@@ -135,16 +135,23 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\MyLayer.cpp" />
     <ClCompile Include="..\Classes\MyScene.cpp" />
+    <ClCompile Include="..\Classes\T01LayerAnchorPoint.cpp" />
+    <ClCompile Include="..\Classes\T02LayerSprite.cpp" />
+    <ClCompile Include="..\Classes\T03LayerZorder.cpp" />
+    <ClCompile Include="..\Classes\T04ColorLayer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="T01LayerAnchorPoint.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\MyLayer.h" />
     <ClInclude Include="..\Classes\MyScene.h" />
+    <ClInclude Include="..\Classes\T01LayerAnchorPoint.h" />
+    <ClInclude Include="..\Classes\T02LayerSprite.h" />
+    <ClInclude Include="..\Classes\T03LayerZorder.h" />
+    <ClInclude Include="..\Classes\T04ColorLayer.h" />
     <ClInclude Include="main.h" />
-    <ClInclude Include="T01LayerAnchorPoint.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\cocos2dx\proj.win32\cocos2d.vcxproj">
@@ -172,6 +179,9 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <Image Include="..\Resources\CloseNormal.png" />
     <Image Include="..\Resources\CloseSelected.png" />
     <Image Include="..\Resources\HelloWorld.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HelloWorld.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
